fixed horizontal scroll issue

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,6 +9,7 @@
     width: 100vw;
     height: 100vh;
     min-height: 800px;
+    max-width:100%;
     z-index: 0;
 }
 
