--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,6 +1,7 @@
 .services{
     margin-top: 140px;
     height: fit-content;
+    max-width: 100%;
     width: 100vw;
     display: flex;
     flex-direction: column;
